--- a/thriller.html
+++ b/thriller.html
@@ -39,7 +39,7 @@
     <div class="patricia">
         <img src="https://m.media-amazon.com/images/M/MV5BZTJiNGM2NjItNDRiYy00ZjY0LTgwNTItZDBmZGRlODQ4YThkL2ltYWdlXkEyXkFqcGdeQXVyMjY5ODI4NDk@._V1_.jpg" alt="Split Movie Poster">
         <div class="text">
-            <p>Split <br> Realeased: 2016 <br> Audience Score: 79% <br> Price: $14.99</p>
+            <p><b>Split</b><br> Realeased: 2016 <br> Audience Score: 79% <br> Price: $14.99</p>
             <div class="bodybuttons">
                 <p>Buy Now</p>
             </div>
@@ -48,7 +48,7 @@
     <div class="us">
         <img src="https://m.media-amazon.com/images/I/61FWNPBWtmL.jpg" alt="Us Movie Poster">
         <div class="text">
-            <p>Us <br> Realeased: 2019 <br> Audience Score: 60% <br> Price: $14.99</p>
+            <p><b>Us</b><br> Realeased: 2019 <br> Audience Score: 60% <br> Price: $14.99</p>
             <div class="bodybuttons">
                 <p>Buy Now</p>
             </div>
@@ -57,7 +57,7 @@
     <div class="getout">
         <img src="https://m.media-amazon.com/images/I/71Zhpi2GyeL.jpg" alt="Get Out Movie Poster">
         <div class="text">
-            <p>Get Out <br> Realeased: 2017 <br> Audience Score: 2017 <br> Price: $14.99</p>
+            <p><b>Get Out</b><br> Realeased: 2017 <br> Audience Score: 2017 <br> Price: $14.99</p>
             <div class="bodybuttons">
                 <p>Buy Now</p>
             </div>
@@ -66,7 +66,7 @@
     <div class="jackman">
         <img src="https://m.media-amazon.com/images/M/MV5BMTg0NTIzMjQ1NV5BMl5BanBnXkFtZTcwNDc3MzM5OQ@@._V1_.jpg" alt="Prisoners Movie Poster">
         <div class="text">
-            <p>Prisoners <br> Realeased: 2013 <br> Audience Score: 87% <br> Price: $4.99</p>
+            <p><b>Prisoners</b><br> Realeased: 2013 <br> Audience Score: 87% <br> Price: $4.99</p>
             <div class="bodybuttons">
                 <p>Buy Now</p>
             </div>
@@ -75,7 +75,7 @@
     <div class="dicaprio">
         <img sizes="https://m.media-amazon.com/images/M/MV5BYzhiNDkyNzktNTZmYS00ZTBkLTk2MDAtM2U0YjU1MzgxZjgzXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_.jpg" alt="Shutter Island Movie Poster">
         <div class="text">
-            <p>Shutter Island <br> Realeased: 2010 <br> Audience Score: 77% <br> Price: $12.99</p>
+            <p><b>Shutter Island</b><br> Realeased: 2010 <br> Audience Score: 77% <br> Price: $12.99</p>
             <div class="bodybuttons">
                 <p>Buy Now</p>
             </div>
@@ -84,7 +84,7 @@
     <div class="advocate">
         <img src="https://m.media-amazon.com/images/M/MV5BM2M2MDJhMDgtMmJkYy00MTgzLTkyZTktODM5NzE1MWUyNDA4XkEyXkFqcGdeQXVyNTA4NzY1MzY@._V1_.jpg" alt="Devil's Advocate Movie Poster">
         <div class="text">
-            <p>Devil's Advocate <br> Realeased: 1997 <br> Audience Score: 80% <br> Price: $7.99</p>
+            <p><b>Devil's Advocate</b><br> Realeased: 1997 <br> Audience Score: 80% <br> Price: $7.99</p>
             <div class="bodybuttons">
                 <p>Buy Now</p>
             </div>
@@ -93,7 +93,7 @@
     <div class="memory">
         <img src="https://m.media-amazon.com/images/M/MV5BOGNmM2IyMjMtNmU0MC00MzdhLWFlNWYtOTlkZDdiOGEwMTE3XkEyXkFqcGdeQXVyMTA3MDk2NDg2._V1_.jpg" alt="Memory Movie Poster">
         <div class="text">
-            <p>Memory <br> Realeased: 2022 <br> Audience Score: 81% <br> Price: $18.99</p>
+            <p><b>Memory</b><br> Realeased: 2022 <br> Audience Score: 81% <br> Price: $18.99</p>
             <div class="bodybuttons">
                 <p>Buy Now</p>
             </div>
@@ -102,7 +102,7 @@
     <div class="misery">
         <img src="https://m.media-amazon.com/images/M/MV5BNzY0ODQ3MTMxN15BMl5BanBnXkFtZTgwMDkwNTg4NjE@._V1_.jpg" alt="Misery Movie Poster">
         <div class="text">
-            <p>Misery <br> Realeased: 1990 <br> Audience Score: 90% <br>Price: $14.99</p>
+            <p><b>Misery</b><br> Realeased: 1990 <br> Audience Score: 90% <br>Price: $14.99</p>
             <div class="bodybuttons">
                 <p>Buy Now</p>
             </div>
