--- a/action.html
+++ b/action.html
@@ -41,7 +41,7 @@
             <div class="text">
                 <p><b>The Northman</b> <br> Realeased: 2022 <br> Audience Score: 64% <br> Price: $14.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -50,7 +50,7 @@
             <div class="text">
                 <p><b>Punisher: War Zone</b> <br> Realeased: 2008 <br> Audience Score: 42% <br> Price: $9.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
             <div class="text">
                 <p><b>The Batman</b><br>Realeased: 2023 <br> Audience Score: 87% <br> Price: $7.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -68,7 +68,7 @@
             <div class="text">
                 <p><b>The Flash</b><br>Realeased: 2023 <br> Audience Score: 83% <br> Prince: $9.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -77,7 +77,7 @@
             <div class="text">
                 <p><b>Deadpool</b><br> Realeased: 2016 <br> Audience Score: 90% <br> Price: $14.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
             <div class="text">
                 <p><b>John Wick 4</b><br> Realeased: 2023 <br> Audience Score: 93% <br> Price: $12.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -95,7 +95,7 @@
             <div class="text">
                 <p><b>The Purge: Anarchy</b><br> Realeased: 2014 <br> Audience Score: 56% <br> Price: $14.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -104,7 +104,7 @@
             <div class="text">
                 <p><b>X-men First Class</b><br> Realeased: 2011 <br> Audience Score: 87% <br> Price: $14.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
