--- a/bestsellers.html
+++ b/bestsellers.html
@@ -41,7 +41,7 @@
             <div class="text">
                 <p><b>What Is A Woman?</b><br> Realeased: 2022 <br>Audience Score: 99% <br> Price: $19.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -50,7 +50,7 @@
             <div class="text">
                 <p><b>Joker</b><br> Realeased: 2019 <br> Audience Score: 88% <br> Price: $7.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
             <div class="text">
                 <p><b>Knives Out</b><br> Realeased: 2019 <br> Audience Score: 92% <br> Price: $7.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -68,7 +68,7 @@
             <div class="text">
                 <p><b>The Dark Knight</b><br> Realeased: 2008 <br> Audience Score: 94$ <br> Price: $19.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -77,7 +77,7 @@
             <div class="text">
                 <p><b>Sleepy Hollow</b><br> Realeased: 1999 <br> Audience Score: 80% <br> Price: $14.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
             <div class="text">
                 <p><b>No Time To Die</b><br> Realeased: 2021 <br> Audience Score: 88% <br> Price: $19.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -95,7 +95,7 @@
             <div class="text">
                 <p><b>Dracula: Untold</b><br> Realeased: 2014 <br> Audience Score: 58% <br> Price: $4.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -104,7 +104,7 @@
             <div class="text">
                 <p><b>King Kong</b><br> Realeased: 2005 <br> Audience Score: 50% <br> Price: $5.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
