--- a/animated.html
+++ b/animated.html
@@ -41,7 +41,7 @@
             <div class="text">
                 <p><b>Inside Out</b><br> Realeased: 2015 <br> Audience Score: 89% <br> Price: $15.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -50,7 +50,7 @@
             <div class="text">
                 <p><b>Aloha Scooby Doo</b><br> Realeased: 2005 <br> Audience Score: 62% <br> Price: $9.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
             <div class="text">
                 <p><b>Monster Inc</b><br> Realeased: 2001 <br> Audience Score: 90% <br> Price: $9.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -68,7 +68,7 @@
             <div class="text">
                 <p><b>Coco</b><br> Realeased: 2017 <br> Audience Score: 94% <br> Price: $12.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -77,7 +77,7 @@
             <div class="text">
                 <p><b>Encanto</b><br> Realeased: 2021 <br> Audience Score: 93% <br> Price: $9.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
             <div class="text">
                 <p><b>Zootopia</b><br> Realeased: 2016 <br> Audience Score: 92% <br> Price: $19.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -95,7 +95,7 @@
             <div class="text">
                 <p><b>The Killing Joke</b><br> Realeased: 2016 <br> Audience Score: 50% <br> Price: $6.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -104,7 +104,7 @@
             <div class="text">
                 <p><b>Under The Red Hood</b><br> Realeased: 2010 <br> Audience Score: 92% <br> Price: $12.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
