--- a/newarrivals.html
+++ b/newarrivals.html
@@ -41,7 +41,7 @@
         <div class="text">
             <p><b>Terrifer 2</b><br> Realeased: 2022 <br> Audience Score: 80% <br> Price: $19.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -50,7 +50,7 @@
         <div class="text">
             <p><b>The Conjuring 3</b><br> Realeased: 2021 <br> Audience Score: 83% <br> Price: $14.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -59,7 +59,7 @@
         <div class="text">
             <p><b>The Nun 2</b><br> Realeased: 2023 <br> Audience Score: 57% <br> Price: $19.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -68,7 +68,7 @@
         <div class="text">
             <p><b>The Pale Blue Eyes</b><br> Realeased: 2022 <br> Audience Score: 69% <br> Price: $17.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -77,7 +77,7 @@
         <div class="text">
             <p><b>Avatar 2</b><br> Realeased: 2022 <br> Audience Score: 92% <br> Price: $19.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
         <div class="text">
             <p><b>Oppenheimer</b> <br> Realeased: 2023 <br> Audience Score: 91% <br> Price: $29.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -95,7 +95,7 @@
         <div class="text">
             <p><b>Evil Dead Rise</b> <br> Realeased: 2023 <br> Audience Score: 76% <br> Price: $9.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -104,7 +104,7 @@
         <div class="text">
             <p><b>Black Panther 2</b><br> Realeased: 2022 <br> Audience Score: 94% <br> Price: $9.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
