--- a/documentary.html
+++ b/documentary.html
@@ -41,7 +41,7 @@
             <div class="text">
                 <p><b>Jim & Andy</b><br> Realeased: 2017 <br> Audience Score: 74% <br> Price: $9.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -50,7 +50,7 @@
             <div class="text">
                 <p><b>The Founder</b><br>Realeased: 2016 <br> Audience Score: 82% <br> Price: $9.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
             <div class="text">
                 <p><b>22 July</b><br> Realeased: 2018 <br> Audience Score: 69% <br> Price: $11.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -68,7 +68,7 @@
             <div class="text">
                 <p><b>Gaga 5 Foot 2</b><br> Realeased: 2017 <br> Audience Score: 80% <br> Price: $10.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -77,7 +77,7 @@
             <div class="text">
                 <p><b>Bob Lazar</b><br> Realeased: 2018 <br> Audience Score: 44% <br> Price: $8.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
             <div class="text">
                 <p><b>Drain Alcatraz</b><br>Realeased: 2017 <br> Audience Score: 61% <br> Price: $5.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -95,7 +95,7 @@
             <div class="text">
                 <p><b>Drain Titanic</b><br> Realeased: 2016 <br> Audience Score: 64% <br> Price: $5.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -104,7 +104,7 @@
             <div class="text">
                 <p><b>Return To Space</b><br> Realeased: 2022 <br> Audience Score: 77% <br> Price: $9.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
