--- a/fantasy.html
+++ b/fantasy.html
@@ -41,7 +41,7 @@
         <div class="text">
             <p><b>Dark Shadows</b><br> Realeased: 2012 <br> Audience Score: 46% <br> Price: $12.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -50,7 +50,7 @@
         <div class="text">
             <p><b>The Shape Of Water</b><br> Realeased: 2017 <br> Audience Score: 72% <br> Price: $9.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -59,7 +59,7 @@
         <div class="text">
             <p><b>Big Fish</b><br> Realeased: 2003 <br> Audience Score: 89% <br> Price: $12.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -68,7 +68,7 @@
         <div class="text">
             <p><b>Pan's Labyrnith</b><br> Realeased: 2006 <br> Audience Score: 91% <br> Price: $9.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -77,7 +77,7 @@
         <div class="text">
             <p><b>Avatar</b><br> Realeased: 2009 <br> Audience Score: 82% <br> Price: $15.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
         <div class="text">
             <p><b>Jumanji</b><br> Realeased: 2017 <br> Audience Score: 87% <br> Price: $14.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -95,7 +95,7 @@
         <div class="text">
             <p><b>Mummy: Returns</b><br> Realeased: 2001 <br> Audience Score: 63% <br> Price: $14.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -104,7 +104,7 @@
         <div class="text">
             <p><b>The Hobbit</b><br> Realeased: 2012 <br> Audience Score: 83% <br> Price: $17.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
