--- a/comedy.html
+++ b/comedy.html
@@ -42,7 +42,7 @@
             <div class="text">
                 <p><b>BeetleJuice</b><br> Realeased: 1988 <br> Audience Score: 82% <br> Price: $9.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -51,7 +51,7 @@
             <div class="text">
                 <p><b>ReinField</b><br> Realeased: 2023 <br> Audience Score: 79% <br> Price: $19.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -60,7 +60,7 @@
             <div class="text">
                 <p><b>Hubie Halloween</b><br> Realeased: 2020 <br> Audience Score: 47% <br> Price: $15.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -69,7 +69,7 @@
             <div class="text">
                 <p><b>Free Guy</b><br> Realeased: 2021 <br> Audience Score: 94% <br> Price: $19.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div> 
         </div>
@@ -78,7 +78,7 @@
             <div class="text">
                 <p><b>Scary Movie</b><br> Realeased: 2000 <br> Audience Score: 43% <br> Price: $14.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -87,7 +87,7 @@
             <div class="text">
                 <p><b>Borat</b><br> Realeased: 2020 <br> Audience Score: 62% <br> Price: $7.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -96,7 +96,7 @@
             <div class="text">
                 <p><b>The Addams Family</b><br> Realeased: 1991 <br> Audience Score: 66% <br> Price: $14.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -105,7 +105,7 @@
             <div class="text">
                 <p><b>Home Alone</b><br> Realeased: 1990 <br> Audience Score: 80% <br> Price: $14.99</p>
                 <div class="bodybuttons">
-                    <p>Buy Now</p>
+                    <a href="cart.html">Buy Now</a>
                 </div>
             </div>
         </div>
