--- a/scifi.html
+++ b/scifi.html
@@ -41,7 +41,7 @@
         <div class="text">
             <p><b>Ready Player One</b><br> Realeased: 2018 <br> Audeince Score: 77% <br> Price: $14.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -50,7 +50,7 @@
         <div class="text">
             <p><b>The Martian</b><br> Realeased: 2015 <br> Audience Score: 91% <br> Price: $14.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -59,7 +59,7 @@
         <div class="text">
             <p><b>Blade Runner 2049</b><br> Realeased: 2017 <br> Audience Score: 87% <br> Price: $9.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -68,7 +68,7 @@
         <div class="text">
             <p><b>Interstellar</b><br> Realeased: 2014 <br> Audeince Score: 86% <br> Price: $9.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -77,7 +77,7 @@
         <div class="text">
             <p><b>Life</b><br> Realeased: 2017 <br> Audience Score: 54% <br> Price: $12.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
         <div class="text">
             <p><b>Dune</b><br> Realeased: 2021 <br> Audience Score: 90% <br> Price: $16.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -95,7 +95,7 @@
         <div class="text">
             <p><b>Jurrassic Park</b><br> Realeased: 1993 <br> Audeince Score: 91% <br> Price: $14.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -104,7 +104,7 @@
         <div class="text">
             <p><b>The Matrix</b><br> Realeased: 1999 <br> Audience Score: 85% <br> Price: $14.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
