--- a/noir.html
+++ b/noir.html
@@ -41,7 +41,7 @@
         <div class="text">
             <p><b>Nightcrawler</b><br> Realeased: 2014 <br> Audience Score: 86% <br> Price: $14.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -50,7 +50,7 @@
         <div class="text">
             <p><b>Mute</b><br> Realeased: 2017 <br> Audience Score: 46% <br> Price: $9.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -59,7 +59,7 @@
         <div class="text">
             <p><b>The Usual Suspects</b><br> Realeased: 1995 <br> Audience Score: 96% <br> Price: $7.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -68,7 +68,7 @@
         <div class="text">
             <p><b>L.A Confidential</b><br> Realeased: 1996 <br> Audience Score: 94% <br> Price: $4.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -77,7 +77,7 @@
         <div class="text">
             <p><b>Max Payne</b> <br> Realeased: 2008 <br> Audience Score: 29% <br> Price: $14.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
         <div class="text">
             <p><b>Diaturbia</b><br> Realeased: 2007 <br> Audience Score: 77% <br> Price: $5.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -95,7 +95,7 @@
         <div class="text">
             <p><b>Marlowe</b><br> Realeased: 2022 <br> Audience Score: 37% <br> Price: $19.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -104,7 +104,7 @@
         <div class="text">
             <p><b>Pulp Fiction</b><br> Realeased: 1994 <br> Audience Score: 96% <br> Price: $16.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
