--- a/horror.html
+++ b/horror.html
@@ -41,7 +41,7 @@
         <div class="text">
             <p><b>The Conjuring</b><br> Realeased: 2013 <br> Audeince Score: 83% <br> Price: $14.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -50,7 +50,7 @@
         <div class="text"> 
             <p><b>Annabelle</b><br> Realeased: 2014 <br> Audience Score: 35% <br> Price: $12.99 </p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -59,7 +59,7 @@
         <div class="text">
             <p><b>The Nun</b><br> Realeased: 2018 <br> Audience Score: 35% <br> Price: $14.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -68,7 +68,7 @@
         <div class="text">
             <p><b>Insidious 4</b> Realeased: 2018 <br> Audience Score: 50% <br> Price: $12.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -77,7 +77,7 @@
         <div class="text">
             <p><b>Winchester</b><br> Realeased: 2018 <br> Audience Score: 32% <br> Price: $9.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
         <div class="text">
             <p><b>Sinister</b> Realeased: 2012 <br> Audience Score: 62% <br> Price: $5.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -95,7 +95,7 @@
         <div class="text">
             <p><b>Woman In Black</b><br> Realeased: 2012 <br> Audience Score: 54% <br> Price: $12.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -104,7 +104,7 @@
         <div class="text">
             <p><b>It: Chapter Two</b><br> Realeased: 2019 <br> Audience Score: 78% <br> Price: $14.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
