--- a/truecrime.html
+++ b/truecrime.html
@@ -41,7 +41,7 @@
         <div class="text">
             <p><b>Zodiac</b><br> Realeased: 2007 <br> Audience Score: 77% <br> Price: $14.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -50,7 +50,7 @@
         <div class="text">
             <p><b>My Friend Dahmer</b><br> Realeased: 2017 <br> Audience Score: 61% <br> Price: $5.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -59,7 +59,7 @@
         <div class="text">
             <p>Scream <br> Realeased: 1996 <br> Audience Score: 80% <br> Price: $16.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -68,7 +68,7 @@
         <div class="text">
             <p><b>Halloween</b><br> Realeased: 1978 <br> Audience Score: 89% <br> Price: $9.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -77,7 +77,7 @@
         <div class="text">
             <p><b>Friday The 13th</b><br> Realeased: 2009 <br> Audience Score: 46% <br> Price: $12.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
         <div class="text">
             <p><b>American Psycho</b><br> Realeased: 2000 <br> Audience Score: 85% <br> Price: $4.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -95,7 +95,7 @@
         <div class="text">
             <p><b>The Strangers</b><br> Realeased: 2018 <br> Audience Score: 35% <br> Price: $14.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
@@ -104,7 +104,7 @@
         <div class="text">
             <p><b>Legend</b><br> Realeased: 2015 <br> Audience Score: 59% <br> Price: $14.99</p>
             <div class="bodybuttons">
-                <p>Buy Now</p>
+                <a href="cart.html">Buy Now</a>
             </div>
         </div>
     </div>
