--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             <textarea id="message" name="user_message"></textarea>
         </li>
         <br>
-        <li class="bodybuttons">
+        <li class="formbutton">
             <a href="succesfulcontact.html" type="submit">Send Your Message</a>
         </li>
     </ul>
