--- a/animated.html
+++ b/animated.html
@@ -31,8 +31,13 @@
     </div>
 </header>
 
-    <!--Visible Page Title-->
-    <h1>Animated Movies</h1>
+    <!--Page Title + Become A Member Button-->
+    <div id="pagetitle">
+        <h1>Animated Movies</h1>
+        <div class="titlebutton">
+            <a href="become.html">Become A Member</a>
+        </div>
+    </div>
 
     <!--Movies Images + Descritpions + Buttons-->
     <div class="flex-content wrap">
