--- a/comedy.html
+++ b/comedy.html
@@ -32,8 +32,13 @@
 </header>
 
 
-    <!--Visible Page Title-->
-    <h1>Comedy Movies</h1>
+    <!--Page Title + Become A Member Button-->
+    <div id="pagetitle">
+        <h1>Comedy Movies</h1>
+        <div class="titlebutton">
+            <a href="become.html">Become A Member</a>
+        </div>
+    </div>
 
     <!--Movies Images + Descritpions + Buttons-->
     <div class="flex-content wrap">
