--- a/horror.html
+++ b/horror.html
@@ -89,7 +89,7 @@
     <div class="sinister">
         <img src="https://m.media-amazon.com/images/M/MV5BMjI5MTg1Njg0Ml5BMl5BanBnXkFtZTcwNzg2Mjc4Nw@@._V1_.jpg" alt="Sinister Movie Poster">
         <div class="text">
-            <p><b>Sinister</b> Realeased: 2012 <br> Audience Score: 62% <br> Price: $5.99</p>
+            <p><b>Sinister</b><br> Realeased: 2012 <br> Audience Score: 62% <br> Price: $5.99</p>
             <div class="bodybuttons">
                 <a href="cart.html">Buy Now</a>
             </div>
