--- a/contact.html
+++ b/contact.html
@@ -31,10 +31,9 @@
     </div>
 </header>
 
-<!--H1 + H2 Above The Form-->
+<!--H1 + H3 Above The Form-->
 <h1>Fill Out The Form Below If You Have Any Questions <br> Or If You Encanter Any Problems</h1>
-<br>
-<h2>Our Customer Service Is Open 24 / 7</h2>
+<h3>Our Customer Support Is Open 24/7</h3>
 
 <!--Contact Form-->
 <form action="succesfulcontact.html">
@@ -59,6 +58,21 @@
         </li>
     </ul>
 </form>
+
+<div class="flex-contact row">
+    <div id="location">
+        <p><b>Our Headqurters</b><p>
+        <p>224 Park Drive, Gotham City</p>
+    </div>
+    <div id="phone">
+        <p><b>Our Phone Number</b></p>
+        <p>+1 (330) 530-7972</p>
+    </div>
+    <div id="email">
+        <p><b>Our E-mail Address</b></p>
+        <p>SqaureEyes@gmail.com</p>
+    </div>
+</div>
 
 <!--Footer Code-->
 <footer>
