--- a/about.html
+++ b/about.html
@@ -31,6 +31,19 @@
     </div>
 </header>
 
+<!--Main Content On The Page-->
+<div class="flex-about column">
+    <div class="abouttitle">
+        <h1>What Is Sqaure Eyes?</h1>
+    </div>
+    <div class="abouttext">
+        <p>Do you prefer blockbuster movies from the heart of Hollywood ? Or do you prefer independent movies to discover new faces ?</p>
+        <p>No matter which one you prefer, Square Eyes have just the right movies for you.</p>
+        <p>Blockbusters, Indi movies, Animated, Action, Documentaries, Comedy, Fantasy, Fiction, Horror, Sci-Fi, True Crime, Thriller. Square Eyes have them all.</p> 
+        <p>If you are a movie lover who could watch movies all day, everyday. Square Eyes is here to offer you a membership, where you will save 25% on your every purchase no matter if you are buying a brand new movie or an older one the choice is yours</p>
+    </div>
+</div>
+
 <!--Footer Code-->
 <footer>
     <div class="footer"></div>
