--- a/about.html
+++ b/about.html
@@ -42,6 +42,9 @@
         <p>Blockbusters, Indi movies, Animated, Action, Documentaries, Comedy, Fantasy, Fiction, Horror, Sci-Fi, True Crime, Thriller. Square Eyes have them all.</p> 
         <p>If you are a movie lover who could watch movies all day, everyday. Square Eyes is here to offer you a membership, where you will save 25% on your every purchase no matter if you are buying a brand new movie or an older one the choice is yours</p>
     </div>
+    <div class="specialbutton">
+        <a href="become.html">Become A Member</a>
+    </div>
 </div>
 
 <!--Footer Code-->
