--- a/become.html
+++ b/become.html
@@ -31,6 +31,39 @@
     </div>
 </header>
 
+<!--Main Content Of The Page-->
+<div class="hero-image3">
+    <div class="hero-text3">
+        <h3>Benefits Of Becoming A Member</h3>
+        <ul>
+            <li>25% Discount Of Your Every Purhase</li>
+            <li>25% Cinema Discount</li>
+            <li>25% GameStop Discount</li>
+            <li>25% Movie Merchandise Discount</li>
+            <li>25% Comic Con Ticket Discount</li>
+            <br>
+            <li>
+                <label for="firstname">Enter Your First Name</label>
+                <input type="text" id="name" name="first_name"/>
+            </li>
+            <br>
+            <li>
+                <label for="lastname">Enter Your Last Name</label>
+                <input type="text" id="name" name="last_name"/>
+            </li>
+            <br>
+            <li>
+                <label for="mail">Enter Your E-mail</label>
+                <input type="email" id="mail" name="user_email"/>
+            </li>
+            <br>
+            <li class="formbutton">
+                <a href="successbecome.html" type="submit">Submit Your Information</a>
+            </li>
+        </ul>
+    </div>
+</div>
+
 <!--Footer Code-->
 <footer>
     <div class="footer"></div>
