--- a/become.html
+++ b/become.html
@@ -57,7 +57,7 @@
                 <input type="email" id="mail" name="user_email"/>
             </li>
             <br>
-            <li class="formbutton">
+            <li class="becomebutton">
                 <a href="successbecome.html" type="submit">Submit Your Information</a>
             </li>
         </ul>
