--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,7 @@
     </ul>
 </form>
 
+<!--Buttons With More Contacrt Information-->
 <div class="flex-contact row">
     <div id="location">
         <p><b>Our Headqurters</b><p>
