--- a/successbecome.html
+++ b/successbecome.html
@@ -31,6 +31,31 @@
     </div>
 </header>
 
+<!--Hero With Successful Becoming A Member-->
+<div class="hero-image4">
+    <div class="hero-text4">
+        <h2>You Are Now A Square Eyes Member</h2>
+        <h3>You Will Soon Recive An Email With A Password And More Information</h3>
+        <p>Your Membership Number Is: <br><b>873 3920 213</b></p>
+    </div>
+</div>
+
+<!--Buttons With More Contacrt Information-->
+<div class="flex-contact row">
+    <div id="location">
+        <p><b>Our Headqurters</b><p>
+        <p>224 Park Drive, Gotham City</p>
+    </div>
+    <div id="phone">
+        <p><b>Our Phone Number</b></p>
+        <p>+1 (330) 530-7972</p>
+    </div>
+    <div id="email">
+        <p><b>Our E-mail Address</b></p>
+        <p>SqaureEyes@gmail.com</p>
+    </div>
+</div>
+
 <!--Footer Code-->
 <footer>
     <div class="footer"></div>
